--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -1,55 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+  </head>
 
- <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
+  <body>
+
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
         <div class="navbar-header">
-              <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
+          <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
             <li>
-                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
+              <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+              <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
             </li>
-            {% else %}
+          {% else %}
             <li>
-                <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Username" name="psw" >
-                        <button class="btn btn-primary" type="submit">Login</button>
-                        <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                    </div>
-                </form>
+              <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
+                {% csrf_token %}
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Username" name="username">
+                  <input type="password" class="form-control" placeholder="Username" name="psw">
+                  <button class="btn btn-primary" type="submit">Login</button>
+                  <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
+                </div>
+              </form>
             </li>
-            {% endif %}
+          {% endif %}
         </ul>
-    </div>
-</nav>
+      </div>
+    </nav>
 
-<div class="container-fluid">
-    {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
-    </div>
-</body>
-</html>
+    <div class="container-fluid">
+      {% if success %}
+        <div class="alert alert-success">
+          <!--HINT Display passed info -->
+          <p>Congratulation,
+            {{ user.username }}! you have passed the exam your score is
+            {{success}}
+            /
+            {{grade}}/{{total_mark}}
+            <p></div>
+          {% else %}
+            <div class="alert alert-danger">
+              <!--HINT Display failed info -->
+              <p>Faild,
+                {{ user.username }}! you have Faild the exam your score is
+                {{success}}
+                /
+                {{grade}}/{{total_mark}}
+                <p></div>
+                <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' lesson.course.id %}">Re-test</a>
+              {% endif %}
+              <div class="card-columns-vertical mt-1">
+                <h5 class="">Exam results</h5>
+                <!--HINT Display exam results-->
+                {% for question in questions %}
+                  <div class="card mt-1">
+                    <div class="card-header">
+                      <h5>{{ question }}</h5>
+                    </div>
+                    <div class="card-body">
+                      {% for choice in question.choice_set.all %}
+                        {% if choice in selected_choices %}
+                          {% if choice.is_correct%}
+                            <p class="alert alert-success">{{choice}}
+                              <p>
+                              {% else %}
+                                <p class="alert alert-danger">{{choice}}
+                                  <p>
+                                  {% endif %}
+                                {% else %}
+                                  {% if choice.is_correct %}
+                                    <p class="alert alert-warning">{{choice}}--unselected correct answer<p>
+                                      {% else %}
+                                        <p>{{choice}}
+                                          <p>
+                                          {% endif %}
+
+                                        {% endif %}
+                                      {% endfor %}
+                                    </div>
+                                  </div>
+                                {% endfor %}
+                              </div>
+                            </div>
+                          </body>
+
+                        </html>
